Fix scrollbar.

--- a/site/src/css/scrollbar.css
+++ b/site/src/css/scrollbar.css
@@ -1,27 +1,41 @@
-.thin-scrollbar::-webkit-scrollbar {
-  width: 0.5rem;
-}
+@media (pointer: fine) {
+  .thin-scrollbar {
+    --ifm-scrollbar-thumb-background-color: var(--nirrius-teal-light) !important;
+    --ifm-scrollbar-thumb-outline-color: var(--ifm-color-emphasis-500);
+  }
 
-.thin-scrollbar::-webkit-scrollbar-track {
-  background-color: transparent;
-  background-size: 2px;
-  background-repeat: repeat;
-  border-radius: 0;
-}
+  .thin-scrollbar::-webkit-scrollbar-thumb:hover {
+    --ifm-scrollbar-thumb-outline-color: var(--ifm-color-emphasis-600);
+  }
 
-.thin-scrollbar::-webkit-scrollbar-thumb {
-  background-image: url('/img/dotted.png');
-  background-color: var(--nirrius-teal-light);
-  background-size: 2px;
-  background-repeat: repeat;
-  outline: 2px solid gray-base;
-  border-radius: 0;
-}
 
-.thin-scrollbar::-webkit-scrollbar-corner {
-  background-image: url('/img/dotted.png');
-  background-color: var(--nirrius-teal-light);
-  background-size: 2px;
-  background-repeat: repeat;
-  border-radius: 0;
+  .thin-scrollbar::-webkit-scrollbar {
+    width: 0.5rem;
+  }
+
+  .thin-scrollbar::-webkit-scrollbar-track {
+    background-color: transparent;
+    background-image: url('/img/dotted.png') !important;
+    background-size: 2px;
+    opacity: 0.25;
+    background-repeat: repeat;
+    border-radius: 0;
+  }
+
+  .thin-scrollbar::-webkit-scrollbar-thumb {
+    background-image: url('/img/dotted.png') !important;
+    background-color: var(--ifm-scrollbar-thumb-background-color) !important;
+    background-size: 2px !important;
+    background-repeat: repeat;
+    outline: 2px solid var(--ifm-scrollbar-thumb-outline-color) !important;
+    border-radius: 0 !important;
+  }
+
+  .thin-scrollbar::-webkit-scrollbar-corner {
+    background-image: url('/img/dotted.png') !important;
+    background-color: var(--nirrius-teal-light);
+    background-size: 2px;
+    background-repeat: repeat;
+    border-radius: 0;
+  }
 }
